Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33160

show_status_array() calls various functions via incompatible pointer

    XMLWordPrintable

Details

    Description

      A search git grep 'SHOW_VAR.*char' reveals many functions that do not match the signature of mysql_show_var_func but are registered as function callbacks.

      These should be fixed, to avoid errors like this:

      10.4 832e96deb6f368591dcb35a4fa33b2fd770aa17a

      /mariadb/10.4/sql/sql_show.cc:3843:7: runtime error: call to function show_memory_used(THD*, st_mysql_show_var*, char*, system_status_var*, enum_var_type) through pointer to incorrect function type 'int (*)(THD *, st_mysql_show_var *, void *, system_status_var *, enum_var_type)'
      /mariadb/10.4/sql/mysqld.cc:7612: note: show_memory_used(THD*, st_mysql_show_var*, char*, system_status_var*, enum_var_type) defined here
      

      Some of these functions are defined with a mismatching number of parameters as well.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.