MDEV-33160 show_status_array() calls various functions via incompatible pointer

In commit b4ff64568c88ab3ce559e7bd39853d9cbf86704a the
signature of mysql_show_var_func was changed, but not all functions
of that type were adjusted.

When the server is configured with `cmake -DWITH_ASAN=ON` and
compiled with clang, runtime errors would be flagged for invoking
functions through an incompatible function pointer.

Reviewed by: Michael 'Monty' Widenius